# Sentionaut

./: Cargo.toml  README.md
assets/shaders/: land_vertex_shader.wgsl
src/: main.rs  setup.rs  terrain.rs
